# ica-data

./: README.md  pyproject.toml
.circleci/: config.yml
ica-data/: hello.py
ica_data/: __init__.py  data_api.py
