[project]
name = "ica-data"
version = "0.0.1"
description = "Wrapper for ICA data APIs"
url = "https://github.com/SequenceBio/ica-data"
license = "MIT"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~=63.2.0",
    "wheel ~=0.37.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}